# SlimeGame

./: CMakeLists.txt  ECE2036_Write_Up.txt  config.ini  config.txt  main.cpp
CutScenes/: Background.cpp  Background.h  CutsceneQueue.h  Scene.cpp  Scene.h  Scene1.cpp  Scene1.h
MainGame/: AnimatedGameObject.cpp  AnimatedGameObject.h  EndGame.cpp  EndGame.h  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  GameObject.cpp  GameObject.h  GameOver.cpp  GameOver.h  Instructions.cpp  Instructions.h  MainMenu.cpp  MainMenu.h  MenuItems.cpp  MenuItems.h  RegularGameObject.cpp  RegularGameObject.h  Slime.cpp  Slime.h  StageLevel.cpp  StageLevel.h  StopWatch.h
